<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="32dp">

    <ImageView
        android:id="@+id/logo_ort"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:layout_marginBottom="24dp"
        android:contentDescription="@string/descripcion_logo"
        android:src="@drawable/ort" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/texto_bienvenida"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/texto_bienvenida"
        android:textColor="@color/colorOnBackground"
        android:textAppearance="@style/TextAppearance.Material3.HeadlineMedium"
        android:textAlignment="center"
        android:layout_marginBottom="24dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/boton_ir_a_inicio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/accion_ir_a_inicio"
        android:layout_marginBottom="16dp"
        app:cornerRadius="16dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/boton_ir_a_registro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/accion_ir_a_registro"
        app:cornerRadius="16dp" />

</LinearLayout>
